force-app/main/default/objects/Cancel__c/fields/HoldSection__c.field-meta.xml
<CustomField>
    <fullName>HoldSection__c</fullName>
    <label>保留区分</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>退去日未確定</fullName>
            </value>
            <value>
                <fullName>物件決定確認</fullName>
            </value>
            <value>
                <fullName>新規決裁承認確認</fullName>
            </value>
            <value>
                <fullName>退去日確認後解約</fullName>
            </value>
            <value>
                <fullName>更新から解約に変更</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>