force-app/main/default/objects/Cancel__c/fields/IndividualCorrespondenceContent__c.field-meta.xml
<CustomField>
    <fullName>IndividualCorrespondenceContent__c</fullName>
    <label>個別対応内容</label>
    <type>TextArea</type>
</CustomField>