force-app/main/default/objects/Cancel__c/fields/IsAllLeaveScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>IsAllLeaveScheduledDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>退室予定日一斉フラグ</label>
    <type>Checkbox</type>
</CustomField>