force-app/main/default/objects/Cancel__c/fields/IsApplication__c.field-meta.xml
<CustomField>
    <fullName>IsApplication__c</fullName>
    <formula>IF( ISBLANK( Application__c ) ,0 ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>申請有無</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>