force-app/main/default/objects/Cancel__c/fields/IsCancelApplication__c.field-meta.xml
<CustomField>
    <fullName>IsCancelApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>解約申入れ済みフラグ</label>
    <type>Checkbox</type>
</CustomField>