force-app/main/default/objects/Cancel__c/fields/IsCancelDesiredDate__c.field-meta.xml
<CustomField>
    <fullName>IsCancelDesiredDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>解約希望日チェックフラグ</label>
    <type>Checkbox</type>
</CustomField>