force-app/main/default/objects/Cancel__c/fields/IsFromOther__c.field-meta.xml
<CustomField>
    <fullName>IsFromOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>他業務からの切り替え</label>
    <type>Checkbox</type>
</CustomField>