force-app/main/default/objects/Cancel__c/fields/IsGarage2__c.field-meta.xml
<CustomField>
    <fullName>IsGarage2__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>駐車場有無2</label>
    <type>Text</type>
</CustomField>