force-app/main/default/objects/Cancel__c/fields/IsLeaveGuidance__c.field-meta.xml
<CustomField>
    <fullName>IsLeaveGuidance__c</fullName>
    <defaultValue>true</defaultValue>
    <label>退去案内自動可否(個別）</label>
    <type>Checkbox</type>
</CustomField>