force-app/main/default/objects/Cancel__c/fields/IsLeaveGuidanceFaxSend__c.field-meta.xml
<CustomField>
    <fullName>IsLeaveGuidanceFaxSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>退去案内FAX送信フラグ</label>
    <type>Checkbox</type>
</CustomField>