force-app/main/default/objects/Cancel__c/fields/IsLeaveGuidanceSending__c.field-meta.xml
<CustomField>
    <fullName>IsLeaveGuidanceSending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>退去案内発送チェック</label>
    <type>Checkbox</type>
</CustomField>