force-app/main/default/objects/Cancel__c/fields/IsLeaveStatusConfirm__c.field-meta.xml
<CustomField>
    <fullName>IsLeaveStatusConfirm__c</fullName>
    <label>退去状況確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>