force-app/main/default/objects/Cancel__c/fields/IsLeaveWitness__c.field-meta.xml
<CustomField>
    <fullName>IsLeaveWitness__c</fullName>
    <label>退去立会有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>