force-app/main/default/objects/Cancel__c/fields/IsNonExtendable__c.field-meta.xml
<CustomField>
    <fullName>IsNonExtendable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>延長不可フラグ</label>
    <type>Checkbox</type>
</CustomField>