force-app/main/default/objects/Cancel__c/fields/IsNoticeCancelOnHoldList__c.field-meta.xml
<CustomField>
    <fullName>IsNoticeCancelOnHoldList__c</fullName>
    <formula>TODAY() + 1 &gt;=  TemporaryDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>解約保留通知対象フラグ_リストビュー用</label>
    <type>Checkbox</type>
</CustomField>