force-app/main/default/objects/Cancel__c/fields/IsPenaltyCheckResult__c.field-meta.xml
<CustomField>
    <fullName>IsPenaltyCheckResult__c</fullName>
    <label>違約金有無チェック結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CheckResult</valueSetName>
    </valueSet>
</CustomField>