force-app/main/default/objects/Cancel__c/fields/IsProxyContactAutoNotice__c.field-meta.xml
<CustomField>
    <fullName>IsProxyContactAutoNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連絡窓口自動通知不可</label>
    <type>Checkbox</type>
</CustomField>