force-app/main/default/objects/Cancel__c/fields/IsRetireExpectedPersonReminder__c.field-meta.xml
<CustomField>
    <fullName>IsRetireExpectedPersonReminder__c</fullName>
    <label>退職者督促種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>督促可否確認</fullName>
            </value>
            <value>
                <fullName>データ修正</fullName>
            </value>
            <value>
                <fullName>退職日到来済み</fullName>
            </value>
            <value>
                <fullName>督促対象</fullName>
            </value>
            <value>
                <fullName>督促済み</fullName>
            </value>
            <value>
                <fullName>督促対象外</fullName>
            </value>
            <value>
                <fullName>督促失敗</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>