force-app/main/default/objects/Cancel__c/fields/KeyReturnAddress__c.field-meta.xml
<CustomField>
    <fullName>KeyReturnAddress__c</fullName>
    <label>鍵の送付先_住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>