force-app/main/default/objects/Cancel__c/fields/KeyReturnCounter__c.field-meta.xml
<CustomField>
    <fullName>KeyReturnCounter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>鍵返却窓口</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>鍵返却窓口</relationshipLabel>
    <relationshipName>KeyReturnOwner</relationshipName>
    <type>Lookup</type>
</CustomField>