force-app/main/default/objects/Cancel__c/fields/KeyReturnCounter_FAX__c.field-meta.xml
<CustomField>
    <fullName>KeyReturnCounter_FAX__c</fullName>
    <label>鍵返却窓口FAX</label>
    <type>Phone</type>
</CustomField>