force-app/main/default/objects/Cancel__c/fields/KeyReturnDate__c.field-meta.xml
<CustomField>
    <fullName>KeyReturnDate__c</fullName>
    <label>鍵返還日</label>
    <type>Date</type>
</CustomField>