force-app/main/default/objects/Cancel__c/fields/KeyReturnMethod__c.field-meta.xml
<CustomField>
    <fullName>KeyReturnMethod__c</fullName>
    <label>鍵の返却方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>退去立会時に返却</fullName>
            </value>
            <value>
                <fullName>ポストに投函</fullName>
            </value>
            <value>
                <fullName>郵送</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>