force-app/main/default/objects/Cancel__c/fields/KeyReturnName__c.field-meta.xml
<CustomField>
    <fullName>KeyReturnName__c</fullName>
    <label>鍵の送付先_宛名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>