force-app/main/default/objects/Cancel__c/fields/KeyReturnZipCode__c.field-meta.xml
<CustomField>
    <fullName>KeyReturnZipCode__c</fullName>
    <label>鍵の送付先_〒</label>
    <length>8</length>
    <type>Text</type>
</CustomField>