force-app/main/default/objects/Cancel__c/fields/LandlordNotificationDate__c.field-meta.xml
<CustomField>
    <fullName>LandlordNotificationDate__c</fullName>
    <label>家主通知日</label>
    <type>Date</type>
</CustomField>