force-app/main/default/objects/Cancel__c/fields/LastPaymentMonth__c.field-meta.xml
<CustomField>
    <fullName>LastPaymentMonth__c</fullName>
    <label>最終家賃支払月</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>