force-app/main/default/objects/Cancel__c/fields/LastRentDefraymentDate__c.field-meta.xml
<CustomField>
    <fullName>LastRentDefraymentDate__c</fullName>
    <label>最終家賃負担日</label>
    <type>Date</type>
</CustomField>