force-app/main/default/objects/Cancel__c/fields/LastRentPayDateResult__c.field-meta.xml
<CustomField>
    <fullName>LastRentPayDateResult__c</fullName>
    <label>最終家賃負担日チェック</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CheckResult</valueSetName>
    </valueSet>
</CustomField>