force-app/main/default/objects/Cancel__c/fields/LeaveDateChangeContact__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateChangeContact__c</fullName>
    <label>退去日変更連絡者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>