force-app/main/default/objects/Cancel__c/fields/LeaveDateChangeContactEmailFaxSender__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateChangeContactEmailFaxSender__c</fullName>
    <label>退去日変更の連絡_メールFAX送信者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>