force-app/main/default/objects/Cancel__c/fields/LeaveDateChangeContactStaff__c.field-meta.xml
<CustomField>
    <fullName>LeaveDateChangeContactStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>退去日変更の連絡_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>