force-app/main/default/objects/Cancel__c/fields/LeaveGuidanceDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveGuidanceDate__c</fullName>
    <label>（不要）退去案内送付日</label>
    <type>Date</type>
</CustomField>