force-app/main/default/objects/Cancel__c/fields/LeaveGuidanceFaxSendDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveGuidanceFaxSendDate__c</fullName>
    <label>退去案内FAX送信日</label>
    <type>Date</type>
</CustomField>