force-app/main/default/objects/Cancel__c/fields/LeaveGuideShipper__c.field-meta.xml
<CustomField>
    <fullName>LeaveGuideShipper__c</fullName>
    <label>退去案内書発送者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>