force-app/main/default/objects/Cancel__c/fields/LeaveScheduledChange__c.field-meta.xml
<CustomField>
    <fullName>LeaveScheduledChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>退去予定変更</label>
    <type>Checkbox</type>
</CustomField>