force-app/main/default/objects/Cancel__c/fields/LenderDocumentArriveDate__c.field-meta.xml
<CustomField>
    <fullName>LenderDocumentArriveDate__c</fullName>
    <label>貸主書面着日</label>
    <type>Date</type>
</CustomField>