force-app/main/default/objects/Cancel__c/fields/MandatoryAnnouncer__c.field-meta.xml
<CustomField>
    <fullName>MandatoryAnnouncer__c</fullName>
    <label>必須アナウンス者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>