force-app/main/default/objects/Cancel__c/fields/MessageToCalculateStaff__c.field-meta.xml
<CustomField>
    <fullName>MessageToCalculateStaff__c</fullName>
    <label>精算担当への伝言</label>
    <type>TextArea</type>
</CustomField>