force-app/main/default/objects/Cancel__c/fields/MobileNum1__c.field-meta.xml
<CustomField>
    <fullName>MobileNum1__c</fullName>
    <formula>Resident__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>携帯番号1</label>
    <type>Text</type>
</CustomField>