force-app/main/default/objects/Cancel__c/fields/MobileNum2__c.field-meta.xml
<CustomField>
    <fullName>MobileNum2__c</fullName>
    <formula>Resident__r.Mobile2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>携帯番号2</label>
    <type>Text</type>
</CustomField>