force-app/main/default/objects/Cancel__c/fields/MonthlyRentCalculation__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRentCalculation__c</fullName>
    <label>（不要）解約月賃料計算</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>テスト</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>