force-app/main/default/objects/Cancel__c/fields/MoveOutInformationDate__c.field-meta.xml
<CustomField>
    <fullName>MoveOutInformationDate__c</fullName>
    <label>退去案内日</label>
    <type>Date</type>
</CustomField>