force-app/main/default/objects/Cancel__c/fields/MoveOutScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>MoveOutScheduledDate__c</fullName>
    <label>退去予定日</label>
    <type>Date</type>
</CustomField>