force-app/main/default/objects/Cancel__c/fields/MoveOutScheduledDateEnteredBy__c.field-meta.xml
<CustomField>
    <fullName>MoveOutScheduledDateEnteredBy__c</fullName>
    <label>退去予定日入力者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>