force-app/main/default/objects/Cancel__c/fields/Name2__c.field-meta.xml
<CustomField>
    <fullName>Name2__c</fullName>
    <label>会社名/お名前</label>
    <length>255</length>
    <type>Text</type>
</CustomField>