force-app/main/default/objects/Cancel__c/fields/NewMatter__c.field-meta.xml
<CustomField>
    <fullName>NewMatter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新規</label>
    <referenceTo>NewMatter__c</referenceTo>
    <relationshipLabel>解約申入</relationshipLabel>
    <relationshipName>NewMatterCancel</relationshipName>
    <type>Lookup</type>
</CustomField>