force-app/main/default/objects/Cancel__c/fields/NewmatterDecisionAcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>NewmatterDecisionAcquisitionDate__c</fullName>
    <formula>NewMatter__r.DecisionAcquisitionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>決裁取得日（新規）</label>
    <type>Date</type>
</CustomField>