force-app/main/default/objects/Cancel__c/fields/NewResidenceConfirmationDate__c.field-meta.xml
<CustomField>
    <fullName>NewResidenceConfirmationDate__c</fullName>
    <label>新居確定日</label>
    <type>Date</type>
</CustomField>