force-app/main/default/objects/Cancel__c/fields/NextTimeConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>NextTimeConfirmDate__c</fullName>
    <label>次回確認日</label>
    <type>Date</type>
</CustomField>