force-app/main/default/objects/Cancel__c/fields/OverMoveOutDateCheck__c.field-meta.xml
<CustomField>
    <fullName>OverMoveOutDateCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>期日超</label>
    <type>Checkbox</type>
</CustomField>