force-app/main/default/objects/Cancel__c/fields/OverseasLandlordCheck__c.field-meta.xml
<CustomField>
    <fullName>OverseasLandlordCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>海外家主</label>
    <type>Checkbox</type>
</CustomField>