force-app/main/default/objects/Cancel__c/fields/OverseasLandlordResult__c.field-meta.xml
<CustomField>
    <fullName>OverseasLandlordResult__c</fullName>
    <formula>RealEstate__r.AbroadOwner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>海外家主結果</label>
    <type>Checkbox</type>
</CustomField>