force-app/main/default/objects/Cancel__c/fields/OverseasLandlordTaxPayment__c.field-meta.xml
<CustomField>
    <fullName>OverseasLandlordTaxPayment__c</fullName>
    <label>海外家主　納税額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>