force-app/main/default/objects/Cancel__c/fields/PortalUser__c.field-meta.xml
<CustomField>
    <fullName>PortalUser__c</fullName>
    <formula>Resident__r.IsPortalUser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ポータルユーザー</label>
    <type>Checkbox</type>
</CustomField>