force-app/main/default/objects/Cancel__c/fields/PreparationDate__c.field-meta.xml
<CustomField>
    <fullName>PreparationDate__c</fullName>
    <label>準備日</label>
    <type>Date</type>
</CustomField>