force-app/main/default/objects/Cancel__c/fields/PrimitiveSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>PrimitiveSubmitDate__c</fullName>
    <label>SPT提出日</label>
    <type>Date</type>
</CustomField>