force-app/main/default/objects/Cancel__c/fields/ProvisionalOfferDate__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalOfferDate__c</fullName>
    <label>仮申出日</label>
    <type>Date</type>
</CustomField>