force-app/main/default/objects/Cancel__c/fields/RealEstate__c.field-meta.xml
<CustomField>
    <fullName>RealEstate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RealEstate__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>RealEstate__c.Status__c</field>
            <operation>notEqual</operation>
            <value>解約, 管理外</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipLabel>解約申入</relationshipLabel>
    <relationshipName>RealEstateRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>