force-app/main/default/objects/Cancel__c/fields/RegisteredConfirmingPerson__c.field-meta.xml
<CustomField>
    <fullName>RegisteredConfirmingPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>確認者登録者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RegisteredConfirmingPerson</relationshipName>
    <type>Lookup</type>
</CustomField>