force-app/main/default/objects/Cancel__c/fields/RemittanceMonthSmallCheck__c.field-meta.xml
<CustomField>
    <fullName>RemittanceMonthSmallCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>送金月（小）</label>
    <type>Checkbox</type>
</CustomField>