force-app/main/default/objects/Cancel__c/fields/RemittanceMonthSmallResult__c.field-meta.xml
<CustomField>
    <fullName>RemittanceMonthSmallResult__c</fullName>
    <formula>MONTH (  LastRentDefraymentDate__c ) &gt; LastPaymentMonth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>送金月（小）結果</label>
    <type>Checkbox</type>
</CustomField>