force-app/main/default/objects/Cancel__c/fields/RentBurdenDateResult__c.field-meta.xml
<CustomField>
    <fullName>RentBurdenDateResult__c</fullName>
    <formula>LastRentDefraymentDate__c &lt;=  CancelOffer__c + 29</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>家賃負担日結果</label>
    <type>Checkbox</type>
</CustomField>