force-app/main/default/objects/Cancel__c/fields/ResearchRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ResearchRequestDate__c</fullName>
    <label>調査依頼受付日</label>
    <type>Date</type>
</CustomField>