force-app/main/default/objects/Cancel__c/fields/RetiredPersonReminderType__c.field-meta.xml
<CustomField>
    <fullName>RetiredPersonReminderType__c</fullName>
    <label>（不要）退職者督促種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>テスト</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>