force-app/main/default/objects/Cancel__c/fields/RetireeListArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>RetireeListArrivalDate__c</fullName>
    <label>退職者リスト着日</label>
    <type>Date</type>
</CustomField>