force-app/main/default/objects/Cancel__c/fields/Seal__c.field-meta.xml
<CustomField>
    <fullName>Seal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>捺印管理</label>
    <referenceTo>Seal__c</referenceTo>
    <relationshipLabel>解約申入</relationshipLabel>
    <relationshipName>SealCancelRelation</relationshipName>
    <type>Lookup</type>
</CustomField>