force-app/main/default/objects/Cancel__c/fields/SimultaneousContractGarage__c.field-meta.xml
<CustomField>
    <fullName>SimultaneousContractGarage__c</fullName>
    <label>二重社宅確認日</label>
    <type>Date</type>
</CustomField>