force-app/main/default/objects/Cancel__c/fields/SixMonthsPenaltyCheck__c.field-meta.xml
<CustomField>
    <fullName>SixMonthsPenaltyCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6ヶ月違約金</label>
    <type>Checkbox</type>
</CustomField>