force-app/main/default/objects/Cancel__c/fields/SPTSubmitDateEnteredBy__c.field-meta.xml
<CustomField>
    <fullName>SPTSubmitDateEnteredBy__c</fullName>
    <label>SPT提出日入力者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>