force-app/main/default/objects/Cancel__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約申入れ担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>s4Mz</relationshipName>
    <type>Lookup</type>
</CustomField>