force-app/main/default/objects/Cancel__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>申請待ち</fullName>
            </value>
            <value>
                <fullName>解約保留中</fullName>
            </value>
            <value>
                <fullName>条件確認中</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>