force-app/main/default/objects/Cancel__c/fields/StatusSuccessor__c.field-meta.xml
<CustomField>
    <fullName>StatusSuccessor__c</fullName>
    <label>地位継承人</label>
    <length>255</length>
    <type>Text</type>
</CustomField>