force-app/main/default/objects/Cancel__c/fields/STPRecipient__c.field-meta.xml
<CustomField>
    <fullName>STPRecipient__c</fullName>
    <label>SPT受者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>