force-app/main/default/objects/Cancel__c/fields/WitnessCheckResultType__c.field-meta.xml
<CustomField>
    <fullName>WitnessCheckResultType__c</fullName>
    <label>退去立会有無自動チェック</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CheckResult</valueSetName>
    </valueSet>
</CustomField>