force-app/main/default/objects/Cancel__c/fields/WitnessContact__c.field-meta.xml
<CustomField>
    <fullName>WitnessContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>退去立会予約の連絡先</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>解約申入 (立会連絡先)</relationshipLabel>
    <relationshipName>GZST</relationshipName>
    <type>Lookup</type>
</CustomField>