force-app/main/default/objects/Cancel__c/fields/WitnessContactName__c.field-meta.xml
<CustomField>
    <fullName>WitnessContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>退去立会の連絡先名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>解約申入 (退去立会予約の連絡先)</relationshipLabel>
    <relationshipName>WitnessContactNames</relationshipName>
    <type>Lookup</type>
</CustomField>