force-app/main/default/objects/Cancel__c/fields/WitnessContactZipCode__c.field-meta.xml
<CustomField>
    <fullName>WitnessContactZipCode__c</fullName>
    <formula>WitnessContact__r.PostalCode__c</formula>
    <label>退去立会予約の連絡先郵便番号</label>
    <type>Text</type>
</CustomField>