force-app/main/default/objects/Cancel__c/fields/WorkPlaceFax__c.field-meta.xml
<CustomField>
    <fullName>WorkPlaceFax__c</fullName>
    <formula>Resident__r.WorkDestinationFax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>勤務先FAX</label>
    <type>Text</type>
</CustomField>