force-app/main/default/objects/Cancel__c/recordTypes/LandlordCancel.recordType-meta.xml
<RecordType>
    <fullName>LandlordCancel</fullName>
    <active>true</active>
    <label>家主都合解約</label>
</RecordType>