force-app/main/default/objects/Cancel__c/validationRules/ContactCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   !ISBLANK(CancelCounterStaff__c) ,
   CancelCounter__r.Account__c  &lt;&gt; CancelCounterStaff__r.AccountId
)</errorConditionFormula>
    <errorDisplayField>CancelCounterStaff__c</errorDisplayField>
    <errorMessage>家主の取引先に紐づく取引先担当者を選択してください</errorMessage>
</ValidationRule>