force-app/main/default/objects/Cancel__c/listViews/AccountView.listView-meta.xml
<ListView>
    <fullName>AccountView</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>完了</value>
    </filters>
    <filters>
        <field>Resident__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>所属企業の進行中リストビュー</label>
</ListView>