force-app/main/default/objects/Cancel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage__c</columns>
    <columns>RealEstate__c</columns>
    <columns>Resident__c</columns>
    <columns>MoveOutScheduledDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ContractorChangeGuidanceDate__c</columns>
    <columns>HoldSection__c</columns>
    <columns>CancelOnHold__c</columns>
    <columns>NewMatter__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>