force-app/main/default/objects/Cancel__c/listViews/CancelApplicationTeam_Cancel.listView-meta.xml
<ListView>
    <fullName>CancelApplicationTeam_Cancel</fullName>
    <filterScope>Queue</filterScope>
    <label>解約申入チーム</label>
    <queue>CancelApplicationTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>