force-app/main/default/objects/Cancel__c/listViews/CompleteCancelRealEstate.listView-meta.xml
<ListView>
    <fullName>CompleteCancelRealEstate</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>RealEstate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>完了</value>
    </filters>
    <label>完了した解約手続き(不動産会社)</label>
</ListView>