force-app/main/default/objects/Cancel__c/listViews/DataManagementQueue_Cancel.listView-meta.xml
<ListView>
    <fullName>DataManagementQueue_Cancel</fullName>
    <filterScope>Queue</filterScope>
    <label>データ管理チーム</label>
    <queue>DataManagementQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>