force-app/main/default/objects/Cancel__c/listViews/NoRealEstate.listView-meta.xml
<ListView>
    <fullName>NoRealEstate</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>CancelCalculate__c</columns>
    <columns>Application__c</columns>
    <columns>MoveOutScheduledDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RealEstate__c</field>
        <operation>equals</operation>
    </filters>
    <label>物件無し解約申入一覧</label>
</ListView>